# triango

./: .coverage  .gitignore  README.md  alphazero.py  alphazero_mac.py  cov.txt  crash_test.py  crash_test2.py  dashboard-evaluation.md  dummy.json  env.py  final_coverage.txt  fix_tests.py  go.mod  mcts.py  model.py  pyproject.toml  representation_report.md  rl-alphazero-plan.md  setup.py  shape_representations.txt  test_piece_render.py  test_piece_render2.py  test_projection.py  test_render.py  triango-optimization.md
cmd/visualizer/: main.go
core/: README.md  bitboard.go  grid.go  grid_test.go  pieces.go  print.go  state.go  state_test.go
docs/architecture/: ADR-001-Temporal-Modeling.md
mcts/: README.md  node.go  recorder.go  search.go  search_test.go
python/: model.py
runs/alphazero_triango/: events.out.tfevents.1772903691.luiss-mbp.lan.75408.0
scripts/: benchmark.py  benchmark_async.py
src/: triango_ext.pyi
src/triango/: README.md  config.py  main.py
src/triango/mcts/: README.md  features.py  node.py  search.py
src/triango/model/: README.md  network.py
src/triango/tools/: visualize_all.py
src/triango/training/: README.md  buffer.py  self_play.py  trainer.py
src/triango_ext/: bindings.cpp  env.cpp  env.hpp  mcts.cpp  mcts.hpp
tests/: README.md  test_c_mcts.py  test_config.py  test_cpp_env_parity.py  test_main.py  test_mcts.py  test_network.py  test_pieces_coverage.py  test_representation.py  test_search_coverage.py  test_self_play.py  test_state.py  test_state_coverage.py  test_training.py
